examples/redirect-to-external-domain/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: example
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: example
subsets:
  - addresses:
      - ip: 172.17.220.203
    ports:
      - name: example
        port: 443
        protocol: TCP
